@@ -5,11 +5,14 @@ import com.foodexpress.storeservice.adapter.out.persistence.StoreDto;
 import com.foodexpress.storeservice.adapter.out.persistence.StoreSearchCondition;
 import com.foodexpress.storeservice.adapter.out.persistence.entity.StoreEntity;
 import com.foodexpress.storeservice.domain.store.Store;
+import com.querydsl.core.BooleanBuilder;
+import com.querydsl.core.types.dsl.BooleanExpression;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.foodexpress.storeservice.adapter.out.persistence.entity.QStoreEntity.storeEntity;
 import static com.querydsl.core.types.Projections.fields;
@@ -21,9 +24,9 @@ public class StoreRepositoryImpl extends Querydsl5Support implements StoreReposi
     }
 
     @Override
-    public List<Store> findAllBySearchCondition(StoreSearchCondition searchCondition, Pageable pageable) {
-
+    public Slice<Store> findAllBySearchCondition(StoreSearchCondition searchCondition, Pageable pageable) {
         List<StoreDto> storeDtoList = select(fields(StoreDto.class,
+                                                    storeEntity.id,
                                                     storeEntity.bizNo,
                                                     storeEntity.storeId,
                                                     storeEntity.storeUserId,
@@ -32,6 +35,12 @@ public class StoreRepositoryImpl extends Querydsl5Support implements StoreReposi
                                                     storeEntity.storeName,
                                                     storeEntity.storeStatus,
                                                     storeEntity.startedAt,
+                                                    storeEntity.ratings,
+                                                    storeEntity.ratingsCount,
+                                                    storeEntity.deliveryMinTime,
+                                                    storeEntity.deliveryMaxTime,
+                                                    storeEntity.deliveryMinFee,
+                                                    storeEntity.deliveryMaxFee,
                                                     storeEntity.address.zonecode,
                                                     storeEntity.address.address,
                                                     storeEntity.address.addressEnglish,
@@ -50,11 +59,34 @@ public class StoreRepositoryImpl extends Querydsl5Support implements StoreReposi
                                                     storeEntity.address.bname
         )).from(storeEntity)
             .where(
-                StringUtils.isNotEmpty(searchCondition.getBizNo()) ? storeEntity.bizNo.eq(searchCondition.getBizNo()) : null,
-                StringUtils.isNotEmpty(searchCondition.getStoreName()) ? storeEntity.storeName.contains(searchCondition.getStoreName()) :
-                    null
-            ).fetch();
-        return storeDtoList.stream().map(StoreDto::mapToDomain).collect(Collectors.toList());
+                whereStoreQuery(searchCondition),
+                eqCursorId(searchCondition.getId())
+            ).limit(pageable.getPageSize() + 1L)
+            .orderBy(storeEntity.id.desc())
+            .fetch();
+        boolean hasNext = false;
+
+        if (storeDtoList.size() > pageable.getPageSize()) {
+            storeDtoList.remove(pageable.getPageSize());
+            hasNext = true;
+        }
+        List<Store> stores = storeDtoList.stream().map(StoreDto::mapToDomain).toList();
+        return new SliceImpl<>(stores, pageable, hasNext);
+    }
+
+    private BooleanBuilder whereStoreQuery(StoreSearchCondition searchCondition) {
+        BooleanBuilder booleanBuilder = new BooleanBuilder();
+        return booleanBuilder
+            .and(StringUtils.isNotEmpty(searchCondition.getBizNo()) ? storeEntity.bizNo.eq(searchCondition.getBizNo()) : null)
+            .and(StringUtils.isNotEmpty(searchCondition.getStoreName()) ? storeEntity.storeName.contains(searchCondition.getStoreName()) :
+                     null);
+    }
+
+    private BooleanExpression eqCursorId(Long cursorId) { // (7)
+        if (cursorId != null) {
+            return storeEntity.id.lt(cursorId);
+        }
+        return null;
     }
 
 }
